# integral-calculator

./: Cargo.toml  README.html  README.md
pwa/: config.xml  package-lock.json  package.json
pwa/www/: egui-integrals-64a6e6e33b595b24.js  egui-integrals-64a6e6e33b595b24_bg.wasm  index.html
src/: calculate.rs  main.rs
